--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "preview": "npm run build && vite preview --port 4444"
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@module-federation/vite": "1.1.9",
+    "@types/node": "^22.13.17",
     "@types/react": "18.2.79",
     "@types/react-dom": "18.2.25",
     "@vitejs/plugin-react": "4.2.1",
