--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,10 +3,8 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
+    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "vite.config.ts",
-    "module-federation/vite-importmap-shim.ts"
-  ]
+  "include": ["vite.config.ts", "module-federation/vite-importmap-shim.ts"]
 }
